@@ -48,20 +48,24 @@ class TilgangsbrukerMapperTest {
 	}
 
 	@Test
-	void shouldNotMapNpIdToFolkeregisterIdent() {
-		List<PdlResponse.PdlIdent> baseResponse = createBaseResponse();
-		baseResponse.addAll(Arrays.asList(
-				createIdent(NP_ID, PdlResponse.PdlGruppe.NPID, false),
-				createIdent(NP_ID, PdlResponse.PdlGruppe.NPID, true)
-		));
-		TilgangBruker tilgangBruker = TilgangsbrukerMapper.map(baseResponse);
+	void shouldMapNpIdToFoedselsnr() {
+		List<PdlResponse.PdlIdent> response = List.of(createIdent(NP_ID, PdlResponse.PdlGruppe.NPID, false));
+		TilgangBruker tilgangBruker = TilgangsbrukerMapper.map(response);
 
-		assertThat(tilgangBruker.getAktoerId()).isEqualTo(AKTOERID);
-		assertThat(tilgangBruker.getFoedselsnr()).isEqualTo(FOLKEREGISTERIDENT);
-		assertThat(tilgangBruker.getHistoriskeIdenter()).isEmpty();
-		assertThat(tilgangBruker.getAlleIdenter()).contains(FOLKEREGISTERIDENT);
-		assertThat(tilgangBruker.hentAlleAktoerId()).hasSize(1).contains(AKTOERID);
+		assertThat(tilgangBruker.getFoedselsnr()).isEqualTo(NP_ID);
+		assertThat(tilgangBruker.getAlleIdenter()).hasSize(1).contains(NP_ID);
 	}
+
+	@Test
+	void shouldNotMapNpIdIfFolkeregisteridentExists() {
+		List<PdlResponse.PdlIdent> response = createBaseResponse();
+		response.add(createIdent(NP_ID, PdlResponse.PdlGruppe.NPID, false));
+		TilgangBruker tilgangBruker = TilgangsbrukerMapper.map(response);
+
+		assertThat(tilgangBruker.getFoedselsnr()).isEqualTo(FOLKEREGISTERIDENT);
+		assertThat(tilgangBruker.getAlleIdenter()).hasSize(1).contains(FOLKEREGISTERIDENT);
+	}
+
 
 	List<PdlResponse.PdlIdent> createBaseResponse() {
 		List<PdlResponse.PdlIdent> response = new ArrayList<>();
